Fixed equidistant/centered spacing for type cards.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,6 @@
 }
 
 #typeBox {
-    margin: auto;
-    width: 80%;
+    display: flex;
+    justify-content: space-between;
 }
